02-envoy-gateway/13-securitypolicy-jwt/manifests/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jwt-protect
  namespace: demo
spec:
  parentRefs:
    - name: jwt-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: helloworld
          port: 8080
